# Pinocchio

./: .gitignore  CMakeLists.txt  Makefile
AttachWeights/: AttachWeights.cpp  CMakeLists.txt  Makefile
DemoUI/: CMakeLists.txt  DisplayMesh.h  Makefile  MyWindow.cpp  MyWindow.h  defmesh.cpp  defmesh.h  demoUI.cpp  filter.cpp  filter.h  motion.cpp  motion.h  processor.cpp  processor.h  shared.h
Pinocchio/: CMakeLists.txt  Makefile  Pinocchio.cpp  Pinocchio.h  attachment.cpp  attachment.h  debugging.h  deriv.h  discretization.cpp  dtree.h  dual_quat_cu.h  dual_quat_cu.hpp  embedding.cpp  graphutils.cpp  graphutils.h  hashutils.h  indexer.cpp  indexer.h  intersector.cpp  intersector.h  lsqSolver.cpp  lsqSolver.h  mat3.h  mat3.hpp  mathutils.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  multilinear.h  pin_mesh.cpp  pin_mesh.h  pinocchioApi.cpp  pinocchioApi.h  point3.h  point3.hpp  pointprojector.h  quaddisttree.h  quat_cu.h  quat_cu.hpp  (+12 more)
ViewObj/: Makefile  Model.cpp  Model.h  main.cpp  obj_parser.h  stb_image.h  stb_image_write.h
Viewer/: DefMesh.cpp  DefMesh.h  DisplayMesh.h  Makefile  Motion.cpp  Motion.h  MotionFilter.cpp  MotionFilter.h  cube_model.h  model.cpp  model.h  shader_utils.cpp  viewer.cpp
