CMAKE_MINIMUM_REQUIRED(VERSION 3.21)

SET(ATTACHWEIGHTS_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE PATH "Path to attachweights headers")

ADD_EXECUTABLE( attachweights
AttachWeights.cpp
stdafx.cpp
stdafx.h
)

TARGET_INCLUDE_DIRECTORIES( attachweights PUBLIC
        PINOCCHIO_INCLUDE_DIR
)

TARGET_LINK_LIBRARIES( attachweights PUBLIC
pinocchio
)
